--- a/template.html
+++ b/template.html
@@ -20,16 +20,13 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav ">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Quiénes somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Tienda en Línea</a>
                 </li>
             </ul>
         </div>
@@ -40,16 +37,16 @@
     <nav>
         <ul class="nav nav-pills nav-fill justify-content-center nav2">
             <li class="nav-item">
-                <a class="nav-link  nav-link2" href="#">Active</a>
+                <a class="nav-link  nav-link2" href="#">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Much longer nav link</a>
+                <a class="nav-link nav-link2" href="#">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Link</a>
+                <a class="nav-link nav-link2" href="#">Rastreo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Recomendación para ti</a>
             </li>
         </ul>
     </nav>
