--- a/template.html
+++ b/template.html
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav ">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Tienda en Línea</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link disabled" href="#"</a>
                 </li>
             </ul>
         </div>
@@ -40,16 +40,16 @@
     <nav>
         <ul class="nav nav-pills nav-fill justify-content-center nav2">
             <li class="nav-item">
-                <a class="nav-link  nav-link2" href="#">Active</a>
+                <a class="nav-link  nav-link2" href="#">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Much longer nav link</a>
+                <a class="nav-link nav-link2" href="#">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Link</a>
+                <a class="nav-link nav-link2" href="#">Rastreo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link nav-link2" href="#">Tu Semilla Ideal</a>
             </li>
         </ul>
     </nav>
@@ -60,6 +60,7 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
 
     </section>
+
     </head>
 </body>
 
