se incluye html de rastreo

--- a/rastreo.html
+++ b/rastreo.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/rastreo.css">
-    <title>Document</title>
+    <meta charset="UTF-8" / >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" / >
+    <title>Rastreo Sepomex</title>
 </head>
-
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -53,14 +49,6 @@
             </li>
         </ul>
     </nav>
-    <main>
-        <div class="col-12 col-sm-6 col-md-3"></div>
-    </main>
-    <section>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
 
-    </section>
-    </head>
 </body>
-
 </html>
