--- a/rastreo.html
+++ b/rastreo.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-<head>
-    <meta charset="UTF-8" / >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" / >
-    <title>Rastreo Sepomex</title>
-</head>
-<body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/rastreo.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,16 +20,14 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav ">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Tienda en Línea</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
         </div>
@@ -36,19 +38,50 @@
     <nav>
         <ul class="nav nav-pills nav-fill justify-content-center nav2">
             <li class="nav-item">
-                <a class="nav-link  nav-link2" href="#">Active</a>
+                <a class="nav-link  nav-link2" href="#">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Much longer nav link</a>
+                <a class="nav-link nav-link2" href="#">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Link</a>
+                <a class="nav-link nav-link2" href="#">Rastreo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link nav-link2" href="#">Tu Semilla Ideal</a>
             </li>
         </ul>
     </nav>
+    <main>
+        <div class="col-12 col-sm-6 col-md-3"></div>
+    </main>
+    <section class="section1">
+        <br>
 
+        <div class="container">
+            <h3>Ingresa a la siguiente liga para rastrear tu paquete: </h3>
+            <br>
+            <br>
+
+            <button type="button" class="btn btn-light"> <a href="https://www.correosdemexico.gob.mx/SSLServicios/SeguimientoEnvio/Seguimiento.aspx">Sepomex
+                Rastreo</a></button>
+
+        
+
+
+
+            
+
+            <br>
+            <br>
+            <p>Recuerda que tu guía se mostrara 12 horas después de haber sido enviado, si no aparece, por favor intenta
+                el día de mañana. Todos nuestros envíos son por medio de SEPOMEX, conserva tu guia para cualquier
+                aclaración</p>
+
+
+        </div>
+    </section>
+
+    </head>
 </body>
+
 </html>
