--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/template.css">
-    <title>Document</title>
+    <title>Euforia Garden </title>
 </head>
 
 <body>
+    <div class="col-12 col-sm-6 col-md-3"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -52,7 +53,7 @@
         </ul>
     </nav>
     <main>
-        <div class="col-12 col-sm-6 col-md-3"></div>
+
     </main>
     <section>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
