--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es-mx">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/template.css">
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles/index.css" /> 
     <title>Euforia Garden </title>
 </head>
 
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav ">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">¿Quiénes Somos?</a>
+                    <a class="nav-link" href="/views/nosotros.html">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tienda en Línea</a>
+                    <a class="nav-link" href="/views/tienda.html">Tienda en Línea</a>
                 </li>
                 </li>
             </ul>
@@ -42,13 +42,13 @@
                 <a class="nav-link  nav-link2" href="#">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Blog</a>
+                <a class="nav-link nav-link2" href="/views/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Rastreo</a>
+                <a class="nav-link nav-link2" href="/views/rastreo.html">Rastreo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link2" href="#">Tu Semilla Ideal</a>
+                <a class="nav-link nav-link2" href="/views/recomendacion.html">Tu Semilla Ideal</a>
             </li>
         </ul>
     </nav>
@@ -59,7 +59,6 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-end">
 
     </section>
-
 
 </body>
 
