--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarNav ">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/views/nosotros.html">¿Quiénes Somos?</a>
